2007-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/application.h:
	* glom/utility_widgets/Makefile.am:
	Don't build or use the custom save dialog in client-only 
	mode, because that code is never used.

2007-11-19  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on the latest Bakery version.

1.6.4:

2007-11-16  Armin Burgmeier  <armin@openismus.com>

	* several files: Redid the merge I already wanted to do 10 days ago.
	Something went wrong and not all files have been merged.

2007-11-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/Makefile.am: Add an extra repeated link line.
	* glom/frame_glom.h: Remove the horrible extra member 
	variable hack around that linker strangeness.

1.6.3:

2007-11-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc:
	* glom/libglom/utils.h:
	* glom/utility_widgets/datawidget.cc:
	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc:
	Some very minor comments next to some maemo-ifdefs.

2007-11-06  Armin Burgmeier  <armin@openismus.com>

	* several files: Merged changes from GLOM_CLIENTONLY branch. This
	polishes up the maemo port a bit.

1.6.2:

2007-10-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/field.cc:
	* glom/libglom/data_structure/field.h: Copy constructor: 
	copy m_field_info instead of sharing one reference-counted instance.
	get_field_info(): Add a const overload and make the existing one non-const. 
	This const correctness should prevent us from using the same instance when 
	we actually want to explicitly take a copy.
	This errors were probably caused during the port to libgda 3.0, when 
	Gda::Column became a reference-counted object.
	* glom/mode_design/fields/box_db_table_definition.cc:
	get_field_definition(): copy the field_info instead of just reusing the 
	existing one, to avoid changing the original field_info accidentally.
