@@ -1,3 +1,14 @@
+2007-11-23  Johannes Schmid <johannes.schmid@openismus.com>
+
+	* glom/application.cc:
+	Fixed client only build
+
+	* glom/libglom/data_structure/iso_codes.cc:
+	* glom/reports/report_builder.cc:
+
+	Pushed changes in maemo package upstream 
+	(build with -fno-exceptions)
+
 2007-11-21  Murray Cumming  <murrayc@murrayc.com>
 
 	* glom/application.cc:
